[tool.poetry]
name = "xlchart"
version = "0.2.0"
description = "Excel chart checker"
authors = ["Yoichi Amano <amano.yoichi@gmail.com>"]
readme = "README.md"
packages = [{include = "xlchart", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pywin32 = "*"
tomli = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
black = "*"

[tool.poetry.scripts]
xlccheck = "xlchart.xlccheck:main"
xlcdump = "xlchart.xlcdump:main"
xlcexport = "xlchart.xlcexport:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
